<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PatientProfileFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_profile_heading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:padding="@dimen/default_padding"
            android:text="@string/profile"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <arunkbabu.care.views.CircularImageView
            android:id="@+id/iv_profile_photo"
            android:layout_width="@dimen/dp_image_view_size_large"
            android:layout_height="@dimen/dp_image_view_size_large"
            android:layout_margin="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_profile_heading"
            app:src="@drawable/default_dp" />

        <ProgressBar
            android:id="@+id/pb_profile_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:translationZ="2dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/iv_profile_photo"
            app:layout_constraintEnd_toEndOf="@id/iv_profile_photo"
            app:layout_constraintStart_toStartOf="@id/iv_profile_photo"
            app:layout_constraintTop_toTopOf="@id/iv_profile_photo" />

        <!-- Full Name -->
        <arunkbabu.care.views.TitleDetailCardView
            android:id="@+id/pcv_profile_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_profile_photo"
            app:topText="@string/full_name"
            tools:bottomText="Arun" />

        <!-- Email -->
        <arunkbabu.care.views.TitleDetailCardView
            android:id="@+id/pcv_profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            app:editable="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pcv_profile_full_name"
            app:topText="@string/prompt_email"
            tools:bottomText="arunkbabu90@gmail.com" />

        <!-- Contact Number -->
        <arunkbabu.care.views.TitleDetailCardView
            android:id="@+id/pcv_profile_contact_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pcv_profile_email"
            app:topText="@string/mobile_number"
            tools:bottomText="+919539439554" />


        <!-- Date of Birth-->
        <arunkbabu.care.views.TitleDetailCardView
            android:id="@+id/pcv_profile_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pcv_profile_contact_no"
            app:topText="@string/date_of_birth"
            tools:bottomText="19/06/1997" />

        <!-- Age -->
        <arunkbabu.care.views.TitleDetailCardView
            android:id="@+id/pcv_profile_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:editable="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pcv_profile_dob"
            app:topText="@string/age"
            tools:bottomText="23" />

        <!-- Sex -->
        <arunkbabu.care.views.TitleRadioCardView
            android:id="@+id/rcv_profile_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:headingText="@string/sex"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pcv_profile_age"
            app:radio1Text="@string/male"
            app:radio2Text="@string/female" />

        <!-- Height -->
        <arunkbabu.care.views.TitleDetailCardView
            android:id="@+id/pcv_profile_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rcv_profile_sex"
            app:topText="@string/height_desc"
            tools:bottomText="160" />

        <!-- Weight -->
        <arunkbabu.care.views.TitleDetailCardView
            android:id="@+id/pcv_profile_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pcv_profile_height"
            app:topText="@string/weight_desc"
            tools:bottomText="65" />

        <!-- BMI -->
        <arunkbabu.care.views.TitleDetailCardView
            android:id="@+id/pcv_profile_bmi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:editable="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pcv_profile_weight"
            app:topText="@string/bmi"
            tools:bottomText="65" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_profile_sign_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/sign_out"
            android:backgroundTint="@color/colorSignOutButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pcv_profile_bmi" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>